finished main adaptive

--- a/app/fabrics.html
+++ b/app/fabrics.html
@@ -51,19 +51,19 @@
 					</a>
 				</div>
 				<div class="header-mob-menu-row header-mob-menu-row_red">
-					<a href="#">Каталог</a>
+					<a href="catalog.html">Каталог</a>
 				</div>
 				<div class="header-mob-menu-row">
-					<a href="#">Где купить</a>
+					<a href="where-buy.html">Где купить</a>
 				</div>
 				<div class="header-mob-menu-row">
-					<a href="#">О компании</a>
+					<a href="about.html">О компании</a>
 				</div>
 				<div class="header-mob-menu-row">
-					<a href="#">Доставка и оплата</a>
+					<a href="principels.html">Доставка и оплата</a>
 				</div>
 				<div class="header-mob-menu-row header-mob-menu-row_mb">
-					<a href="#">Интересное</a>
+					<a href="news.html">Интересное</a>
 				</div>
 				<div class="header-mob-menu-row header-mob-menu-row_horiz">
 					<div class="header-mob-menu-row-item">
@@ -756,6 +756,239 @@
 						Фильтр
 						<span class="arrow-down"></span>
 					</a>
+					<div class="filter-mob-side filter-mob-filter-fabrics">
+						<div class="filter-mob-header">
+							<div class="filter-mob-header-text">Фильтры</div>
+							<div class="filter-mob-header-btn-cross">
+								<svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path fill-rule="evenodd" clip-rule="evenodd" d="M11.0719 8.68247L2.67487 0.2854L0.856591 2.10367L9.25366 10.5007L0.856567 18.8978L2.67484 20.7161L11.0719 12.319L19.0393 20.2864L20.8576 18.4681L12.8902 10.5007L20.8576 2.53336L19.0393 0.715088L11.0719 8.68247Z" fill="#3A405B"/>
+								</svg>
+							</div>
+						</div>
+						<div class="filter-mob-main">
+							<div class="filter-mob-main-row" data-filter-fabrics-alphabet>
+								По алфавиту
+							</div>
+							<div class="filter-mob-main-row" data-filter-fabrics-type>
+								Тип материала
+							</div>
+							<div class="filter-mob-main-row" data-filter-color>
+								Цвет
+							</div>
+							<div class="filter-mob-main-row" data-filter-fabrics-cost-category>
+								Ценовая категория
+							</div>
+							<div class="filter-mob-main-row" data-filter-fabrics-specials>
+								Особенности
+							</div>
+							<div class="filter-mob-main-row" data-filter-fabrics-design>
+								Дизайн
+							</div>
+							<div class="filter-mob-main-btn-wrapper">
+								<a href="#" class="card-item-row-item__button filter-btn-mob">Применить</a>
+								<a href="#" class="card-item-row-item__button filter-btn filter-btn_cancel-mob">Сбросить</a>
+							</div>
+						</div>
+					</div>
+					<div class="filter-mob-side filter-mob-side-additional filter-mob-filter-fabrics-alphabet">
+						<div class="filter-mob-header">
+							<div class="filter-mob-header-btn-back">
+								<svg width="29" height="16" viewBox="0 0 29 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M0.292892 7.29289C-0.0976315 7.68342 -0.0976315 8.31658 0.292892 8.70711L6.65685 15.0711C7.04738 15.4616 7.68054 15.4616 8.07107 15.0711C8.46159 14.6805 8.46159 14.0474 8.07107 13.6569L2.41421 8L8.07107 2.34315C8.46159 1.95262 8.46159 1.31946 8.07107 0.928932C7.68054 0.538408 7.04738 0.538408 6.65685 0.928932L0.292892 7.29289ZM29 7L1 7V9L29 9V7Z" fill="#3A405B"/>
+								</svg>
+							</div>
+							<div class="filter-mob-header-text">По алфавиту</div>
+							<div class="filter-mob-header-btn-cross">
+								<svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path fill-rule="evenodd" clip-rule="evenodd" d="M11.0719 8.68247L2.67487 0.2854L0.856591 2.10367L9.25366 10.5007L0.856567 18.8978L2.67484 20.7161L11.0719 12.319L19.0393 20.2864L20.8576 18.4681L12.8902 10.5007L20.8576 2.53336L19.0393 0.715088L11.0719 8.68247Z" fill="#3A405B"/>
+								</svg>
+							</div>
+						</div>
+						<div class="filter-mob-main">
+							<div class="filter-mob-main-custom filter-mob-main-custom-inputs">
+								<input type="text" class="filter-mob-main-input" style="width: 100%" maxlength='1'>
+							</div>
+						</div>
+					</div>
+					<div class="filter-mob-side filter-mob-side-additional filter-mob-filter-fabrics-type">
+						<div class="filter-mob-header">
+							<div class="filter-mob-header-btn-back">
+								<svg width="29" height="16" viewBox="0 0 29 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M0.292892 7.29289C-0.0976315 7.68342 -0.0976315 8.31658 0.292892 8.70711L6.65685 15.0711C7.04738 15.4616 7.68054 15.4616 8.07107 15.0711C8.46159 14.6805 8.46159 14.0474 8.07107 13.6569L2.41421 8L8.07107 2.34315C8.46159 1.95262 8.46159 1.31946 8.07107 0.928932C7.68054 0.538408 7.04738 0.538408 6.65685 0.928932L0.292892 7.29289ZM29 7L1 7V9L29 9V7Z" fill="#3A405B"/>
+								</svg>
+							</div>
+							<div class="filter-mob-header-text">Тип материала</div>
+							<div class="filter-mob-header-btn-cross">
+								<svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path fill-rule="evenodd" clip-rule="evenodd" d="M11.0719 8.68247L2.67487 0.2854L0.856591 2.10367L9.25366 10.5007L0.856567 18.8978L2.67484 20.7161L11.0719 12.319L19.0393 20.2864L20.8576 18.4681L12.8902 10.5007L20.8576 2.53336L19.0393 0.715088L11.0719 8.68247Z" fill="#3A405B"/>
+								</svg>
+							</div>
+						</div>
+						<div class="filter-mob-main">
+							<div class="filter-mob-main-row">
+								Флок
+							</div>
+							<div class="filter-mob-main-row">
+								Велюр
+							</div>
+							<div class="filter-mob-main-row">
+								Шенилл
+							</div>
+							<div class="filter-mob-main-row">
+								Натуральная кожа
+							</div>
+							<div class="filter-mob-main-row">
+								Жаккард
+							</div>
+							<div class="filter-mob-main-row">
+								Замша
+							</div>
+							<div class="filter-mob-main-row">
+								Искуственная кожа
+							</div>
+							<div class="filter-mob-main-row">
+								Рогожка
+							</div>
+						</div>
+					</div>
+					<div class="filter-mob-side filter-mob-side-additional filter-mob-filter-color">
+						<div class="filter-mob-header">
+							<div class="filter-mob-header-btn-back">
+								<svg width="29" height="16" viewBox="0 0 29 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M0.292892 7.29289C-0.0976315 7.68342 -0.0976315 8.31658 0.292892 8.70711L6.65685 15.0711C7.04738 15.4616 7.68054 15.4616 8.07107 15.0711C8.46159 14.6805 8.46159 14.0474 8.07107 13.6569L2.41421 8L8.07107 2.34315C8.46159 1.95262 8.46159 1.31946 8.07107 0.928932C7.68054 0.538408 7.04738 0.538408 6.65685 0.928932L0.292892 7.29289ZM29 7L1 7V9L29 9V7Z" fill="#3A405B"/>
+								</svg>
+							</div>
+							<div class="filter-mob-header-text">Цвет</div>
+							<div class="filter-mob-header-btn-cross">
+								<svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path fill-rule="evenodd" clip-rule="evenodd" d="M11.0719 8.68247L2.67487 0.2854L0.856591 2.10367L9.25366 10.5007L0.856567 18.8978L2.67484 20.7161L11.0719 12.319L19.0393 20.2864L20.8576 18.4681L12.8902 10.5007L20.8576 2.53336L19.0393 0.715088L11.0719 8.68247Z" fill="#3A405B"/>
+								</svg>
+							</div>
+						</div>
+						<div class="filter-mob-main">
+							<div class="card-item-row-colors card-item-row-colors_horiz filter-mob-filter-color-row">
+								<div class="card-item-row-colors__color"></div>
+								<div class="card-item-row-colors__color"></div>
+								<div class="card-item-row-colors__color"></div>
+								<div class="card-item-row-colors__color"></div>
+								<div class="card-item-row-colors__color"></div>
+								<div class="card-item-row-colors__color"></div>
+								<div class="card-item-row-colors__color"></div>
+								<div class="card-item-row-colors__color"></div>
+								<div class="card-item-row-colors__color"></div>
+								<div class="card-item-row-colors__color"></div>
+								<div class="card-item-row-colors__color"></div>
+								<div class="card-item-row-colors__color"></div>
+								<div class="card-item-row-colors__color"></div>
+								<div class="card-item-row-colors__color"></div>
+							</div>
+						</div>
+					</div>
+					<div class="filter-mob-side filter-mob-side-additional filter-mob-filter-fabrics-cost-category">
+						<div class="filter-mob-header">
+							<div class="filter-mob-header-btn-back">
+								<svg width="29" height="16" viewBox="0 0 29 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M0.292892 7.29289C-0.0976315 7.68342 -0.0976315 8.31658 0.292892 8.70711L6.65685 15.0711C7.04738 15.4616 7.68054 15.4616 8.07107 15.0711C8.46159 14.6805 8.46159 14.0474 8.07107 13.6569L2.41421 8L8.07107 2.34315C8.46159 1.95262 8.46159 1.31946 8.07107 0.928932C7.68054 0.538408 7.04738 0.538408 6.65685 0.928932L0.292892 7.29289ZM29 7L1 7V9L29 9V7Z" fill="#3A405B"/>
+								</svg>
+							</div>
+							<div class="filter-mob-header-text">Ценовая категория</div>
+							<div class="filter-mob-header-btn-cross">
+								<svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path fill-rule="evenodd" clip-rule="evenodd" d="M11.0719 8.68247L2.67487 0.2854L0.856591 2.10367L9.25366 10.5007L0.856567 18.8978L2.67484 20.7161L11.0719 12.319L19.0393 20.2864L20.8576 18.4681L12.8902 10.5007L20.8576 2.53336L19.0393 0.715088L11.0719 8.68247Z" fill="#3A405B"/>
+								</svg>
+							</div>
+						</div>
+						<div class="filter-mob-main">
+							<div class="filter-mob-main-row">
+								1-ая ценовая категория
+							</div>
+							<div class="filter-mob-main-row">
+								2-ая ценовая категория
+							</div>
+							<div class="filter-mob-main-row">
+								3-ая ценовая категория
+							</div>
+							<div class="filter-mob-main-row">
+								4-ая ценовая категория
+							</div>
+							<div class="filter-mob-main-row">
+								5-ая ценовая категория
+							</div>
+							<div class="filter-mob-main-row">
+								6-ая ценовая категория
+							</div>
+							<div class="filter-mob-main-row">
+								7-ая ценовая категория
+							</div>
+							<div class="filter-mob-main-row">
+								8-ая ценовая категория
+							</div>
+							<div class="filter-mob-main-row">
+								9-ая ценовая категория
+							</div>
+							<div class="filter-mob-main-row">
+								10-ая ценовая категория
+							</div>
+						</div>
+					</div>
+					<div class="filter-mob-side filter-mob-side-additional filter-mob-filter-fabrics-specials">
+						<div class="filter-mob-header">
+							<div class="filter-mob-header-btn-back">
+								<svg width="29" height="16" viewBox="0 0 29 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M0.292892 7.29289C-0.0976315 7.68342 -0.0976315 8.31658 0.292892 8.70711L6.65685 15.0711C7.04738 15.4616 7.68054 15.4616 8.07107 15.0711C8.46159 14.6805 8.46159 14.0474 8.07107 13.6569L2.41421 8L8.07107 2.34315C8.46159 1.95262 8.46159 1.31946 8.07107 0.928932C7.68054 0.538408 7.04738 0.538408 6.65685 0.928932L0.292892 7.29289ZM29 7L1 7V9L29 9V7Z" fill="#3A405B"/>
+								</svg>
+							</div>
+							<div class="filter-mob-header-text">Особенности</div>
+							<div class="filter-mob-header-btn-cross">
+								<svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path fill-rule="evenodd" clip-rule="evenodd" d="M11.0719 8.68247L2.67487 0.2854L0.856591 2.10367L9.25366 10.5007L0.856567 18.8978L2.67484 20.7161L11.0719 12.319L19.0393 20.2864L20.8576 18.4681L12.8902 10.5007L20.8576 2.53336L19.0393 0.715088L11.0719 8.68247Z" fill="#3A405B"/>
+								</svg>
+							</div>
+						</div>
+						<div class="filter-mob-main">
+							<div class="filter-mob-main-row">
+								Антивандальная
+							</div>
+							<div class="filter-mob-main-row">
+								Водоотталкивающая
+							</div>
+							<div class="filter-mob-main-row">
+								Износостойкая
+							</div>
+							<div class="filter-mob-main-row">
+								Грязеотталкивающая
+							</div>
+						</div>
+					</div>
+					<div class="filter-mob-side filter-mob-side-additional filter-mob-filter-fabrics-design">
+						<div class="filter-mob-header">
+							<div class="filter-mob-header-btn-back">
+								<svg width="29" height="16" viewBox="0 0 29 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M0.292892 7.29289C-0.0976315 7.68342 -0.0976315 8.31658 0.292892 8.70711L6.65685 15.0711C7.04738 15.4616 7.68054 15.4616 8.07107 15.0711C8.46159 14.6805 8.46159 14.0474 8.07107 13.6569L2.41421 8L8.07107 2.34315C8.46159 1.95262 8.46159 1.31946 8.07107 0.928932C7.68054 0.538408 7.04738 0.538408 6.65685 0.928932L0.292892 7.29289ZM29 7L1 7V9L29 9V7Z" fill="#3A405B"/>
+								</svg>
+							</div>
+							<div class="filter-mob-header-text">Дизайн</div>
+							<div class="filter-mob-header-btn-cross">
+								<svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path fill-rule="evenodd" clip-rule="evenodd" d="M11.0719 8.68247L2.67487 0.2854L0.856591 2.10367L9.25366 10.5007L0.856567 18.8978L2.67484 20.7161L11.0719 12.319L19.0393 20.2864L20.8576 18.4681L12.8902 10.5007L20.8576 2.53336L19.0393 0.715088L11.0719 8.68247Z" fill="#3A405B"/>
+								</svg>
+							</div>
+						</div>
+						<div class="filter-mob-main">
+							<div class="filter-mob-main-custom">
+								<label class="filter-checkbox">
+									<input type="checkbox" name="1">
+									<div class="filter-checkbox-square"></div>
+									Однотонный
+								</label>
+								<label class="filter-checkbox">
+									<input type="checkbox" name="1">
+									<div class="filter-checkbox-square"></div>
+									Узор
+								</label>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="block fabrics-result">
 					<div class="fabrics-result-item" onclick="window.location.href='fabrics-active.html'">
