--- a/app/catalog.html
+++ b/app/catalog.html
@@ -51,19 +51,19 @@
 					</a>
 				</div>
 				<div class="header-mob-menu-row header-mob-menu-row_red">
-					<a href="#">Каталог</a>
+					<a href="catalog.html">Каталог</a>
 				</div>
 				<div class="header-mob-menu-row">
-					<a href="#">Где купить</a>
+					<a href="where-buy.html">Где купить</a>
 				</div>
 				<div class="header-mob-menu-row">
-					<a href="#">О компании</a>
+					<a href="about.html">О компании</a>
 				</div>
 				<div class="header-mob-menu-row">
-					<a href="#">Доставка и оплата</a>
+					<a href="principels.html">Доставка и оплата</a>
 				</div>
 				<div class="header-mob-menu-row header-mob-menu-row_mb">
-					<a href="#">Интересное</a>
+					<a href="news.html">Интересное</a>
 				</div>
 				<div class="header-mob-menu-row header-mob-menu-row_horiz">
 					<div class="header-mob-menu-row-item">
@@ -493,6 +493,252 @@
 		<div class="main">
 			<div class="container">
 				<div class="block catalog">
+					<div class="filter-mob">
+						<div class="filter-mob-head">Диваны</div>
+						<div class="filter-mob-row">
+							<div class="filter-mob-btn-wrapper">
+								<a href="#" class="filter-mob-btn" data-filter-catalog>фильтр <span class="arrow-down"></span></a>
+								<a href="#" class="filter-mob-btn" data-sort>сортировать <span class="arrow-down"></span></a>
+							</div>
+						</div>
+						<div class="filter-mob-side filter-mob-sort">
+							<div class="filter-mob-header">
+								<div class="filter-mob-header-text">Сортировать:</div>
+								<div class="filter-mob-header-btn-cross">
+									<svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path fill-rule="evenodd" clip-rule="evenodd" d="M11.0719 8.68247L2.67487 0.2854L0.856591 2.10367L9.25366 10.5007L0.856567 18.8978L2.67484 20.7161L11.0719 12.319L19.0393 20.2864L20.8576 18.4681L12.8902 10.5007L20.8576 2.53336L19.0393 0.715088L11.0719 8.68247Z" fill="#3A405B"/>
+									</svg>
+								</div>
+							</div>
+							<div class="filter-mob-main">
+								<div class="filter-mob-main-row">
+									По популярности
+								</div>
+								<div class="filter-mob-main-row">
+									По названию
+								</div>
+								<div class="filter-mob-main-row">
+									По цене
+								</div>
+								<div class="filter-mob-main-row">
+									По новинкам
+								</div>
+							</div>
+						</div>
+						<div class="filter-mob-side filter-mob-filter-catalog">
+							<div class="filter-mob-header">
+								<div class="filter-mob-header-text">Фильтры</div>
+								<div class="filter-mob-header-btn-cross">
+									<svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path fill-rule="evenodd" clip-rule="evenodd" d="M11.0719 8.68247L2.67487 0.2854L0.856591 2.10367L9.25366 10.5007L0.856567 18.8978L2.67484 20.7161L11.0719 12.319L19.0393 20.2864L20.8576 18.4681L12.8902 10.5007L20.8576 2.53336L19.0393 0.715088L11.0719 8.68247Z" fill="#3A405B"/>
+									</svg>
+								</div>
+							</div>
+							<div class="filter-mob-main">
+								<div class="filter-mob-main-row" data-filter-type>
+									Тип дивана
+								</div>
+								<div class="filter-mob-main-row" data-filter-fabric>
+									Тип обивки
+								</div>
+								<div class="filter-mob-main-row" data-filter-color>
+									Цвет
+								</div>
+								<div class="filter-mob-main-row" data-filter-collection>
+									Коллекция
+								</div>
+								<div class="filter-mob-main-row" data-filter-width>
+									Ширина
+								</div>
+								<div class="filter-mob-main-row" data-filter-cost>
+									Цена
+								</div>
+								<div class="filter-mob-main-custom">
+									<label class="filter-checkbox">
+										<input type="radio" name="1" checked>
+										<div class="filter-checkbox-square"></div>
+										Все
+									</label>
+									<label class="filter-checkbox">
+										<input  type="radio" name="1">
+										<div class="filter-checkbox-square"></div>
+										Акции
+									</label>
+									<label class="filter-checkbox">
+										<input  type="radio" name="1">
+										<div class="filter-checkbox-square"></div>
+										Горящие предложения
+									</label>
+								</div>
+								<div class="filter-mob-main-btn-wrapper">
+									<a href="#" class="card-item-row-item__button filter-btn-mob">Применить</a>
+									<a href="#" class="card-item-row-item__button filter-btn filter-btn_cancel-mob">Сбросить</a>
+								</div>
+							</div>
+						</div>
+						<div class="filter-mob-side filter-mob-side-additional filter-mob-filter-type">
+							<div class="filter-mob-header">
+								<div class="filter-mob-header-btn-back">
+									<svg width="29" height="16" viewBox="0 0 29 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M0.292892 7.29289C-0.0976315 7.68342 -0.0976315 8.31658 0.292892 8.70711L6.65685 15.0711C7.04738 15.4616 7.68054 15.4616 8.07107 15.0711C8.46159 14.6805 8.46159 14.0474 8.07107 13.6569L2.41421 8L8.07107 2.34315C8.46159 1.95262 8.46159 1.31946 8.07107 0.928932C7.68054 0.538408 7.04738 0.538408 6.65685 0.928932L0.292892 7.29289ZM29 7L1 7V9L29 9V7Z" fill="#3A405B"/>
+									</svg>
+								</div>
+								<div class="filter-mob-header-text">Тип дивана</div>
+								<div class="filter-mob-header-btn-cross">
+									<svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path fill-rule="evenodd" clip-rule="evenodd" d="M11.0719 8.68247L2.67487 0.2854L0.856591 2.10367L9.25366 10.5007L0.856567 18.8978L2.67484 20.7161L11.0719 12.319L19.0393 20.2864L20.8576 18.4681L12.8902 10.5007L20.8576 2.53336L19.0393 0.715088L11.0719 8.68247Z" fill="#3A405B"/>
+									</svg>
+								</div>
+							</div>
+							<div class="filter-mob-main">
+								<div class="filter-mob-main-row">
+									Тип 1
+								</div>
+								<div class="filter-mob-main-row">
+									Тип 2
+								</div>
+								<div class="filter-mob-main-row">
+									Тип 3
+								</div>
+								<div class="filter-mob-main-row">
+									Тип 4
+								</div>
+							</div>
+						</div>
+						<div class="filter-mob-side filter-mob-side-additional filter-mob-filter-fabric">
+							<div class="filter-mob-header">
+								<div class="filter-mob-header-btn-back">
+									<svg width="29" height="16" viewBox="0 0 29 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M0.292892 7.29289C-0.0976315 7.68342 -0.0976315 8.31658 0.292892 8.70711L6.65685 15.0711C7.04738 15.4616 7.68054 15.4616 8.07107 15.0711C8.46159 14.6805 8.46159 14.0474 8.07107 13.6569L2.41421 8L8.07107 2.34315C8.46159 1.95262 8.46159 1.31946 8.07107 0.928932C7.68054 0.538408 7.04738 0.538408 6.65685 0.928932L0.292892 7.29289ZM29 7L1 7V9L29 9V7Z" fill="#3A405B"/>
+									</svg>
+								</div>
+								<div class="filter-mob-header-text">Тип обивки</div>
+								<div class="filter-mob-header-btn-cross">
+									<svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path fill-rule="evenodd" clip-rule="evenodd" d="M11.0719 8.68247L2.67487 0.2854L0.856591 2.10367L9.25366 10.5007L0.856567 18.8978L2.67484 20.7161L11.0719 12.319L19.0393 20.2864L20.8576 18.4681L12.8902 10.5007L20.8576 2.53336L19.0393 0.715088L11.0719 8.68247Z" fill="#3A405B"/>
+									</svg>
+								</div>
+							</div>
+							<div class="filter-mob-main">
+								<div class="filter-mob-main-row">
+									Тип 1
+								</div>
+								<div class="filter-mob-main-row">
+									Тип 2
+								</div>
+								<div class="filter-mob-main-row">
+									Тип 3
+								</div>
+								<div class="filter-mob-main-row">
+									Тип 4
+								</div>
+							</div>
+						</div>
+						<div class="filter-mob-side filter-mob-side-additional filter-mob-filter-color">
+							<div class="filter-mob-header">
+								<div class="filter-mob-header-btn-back">
+									<svg width="29" height="16" viewBox="0 0 29 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M0.292892 7.29289C-0.0976315 7.68342 -0.0976315 8.31658 0.292892 8.70711L6.65685 15.0711C7.04738 15.4616 7.68054 15.4616 8.07107 15.0711C8.46159 14.6805 8.46159 14.0474 8.07107 13.6569L2.41421 8L8.07107 2.34315C8.46159 1.95262 8.46159 1.31946 8.07107 0.928932C7.68054 0.538408 7.04738 0.538408 6.65685 0.928932L0.292892 7.29289ZM29 7L1 7V9L29 9V7Z" fill="#3A405B"/>
+									</svg>
+								</div>
+								<div class="filter-mob-header-text">Цвет</div>
+								<div class="filter-mob-header-btn-cross">
+									<svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path fill-rule="evenodd" clip-rule="evenodd" d="M11.0719 8.68247L2.67487 0.2854L0.856591 2.10367L9.25366 10.5007L0.856567 18.8978L2.67484 20.7161L11.0719 12.319L19.0393 20.2864L20.8576 18.4681L12.8902 10.5007L20.8576 2.53336L19.0393 0.715088L11.0719 8.68247Z" fill="#3A405B"/>
+									</svg>
+								</div>
+							</div>
+							<div class="filter-mob-main">
+								<div class="card-item-row-colors card-item-row-colors_horiz filter-mob-filter-color-row">
+									<div class="card-item-row-colors__color"></div>
+									<div class="card-item-row-colors__color"></div>
+									<div class="card-item-row-colors__color"></div>
+									<div class="card-item-row-colors__color"></div>
+									<div class="card-item-row-colors__color"></div>
+									<div class="card-item-row-colors__color"></div>
+									<div class="card-item-row-colors__color"></div>
+									<div class="card-item-row-colors__color"></div>
+									<div class="card-item-row-colors__color"></div>
+									<div class="card-item-row-colors__color"></div>
+									<div class="card-item-row-colors__color"></div>
+									<div class="card-item-row-colors__color"></div>
+									<div class="card-item-row-colors__color"></div>
+									<div class="card-item-row-colors__color"></div>
+								</div>
+							</div>
+						</div>
+						<div class="filter-mob-side filter-mob-side-additional filter-mob-filter-collection">
+							<div class="filter-mob-header">
+								<div class="filter-mob-header-btn-back">
+									<svg width="29" height="16" viewBox="0 0 29 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M0.292892 7.29289C-0.0976315 7.68342 -0.0976315 8.31658 0.292892 8.70711L6.65685 15.0711C7.04738 15.4616 7.68054 15.4616 8.07107 15.0711C8.46159 14.6805 8.46159 14.0474 8.07107 13.6569L2.41421 8L8.07107 2.34315C8.46159 1.95262 8.46159 1.31946 8.07107 0.928932C7.68054 0.538408 7.04738 0.538408 6.65685 0.928932L0.292892 7.29289ZM29 7L1 7V9L29 9V7Z" fill="#3A405B"/>
+									</svg>
+								</div>
+								<div class="filter-mob-header-text">Коллекция</div>
+								<div class="filter-mob-header-btn-cross">
+									<svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path fill-rule="evenodd" clip-rule="evenodd" d="M11.0719 8.68247L2.67487 0.2854L0.856591 2.10367L9.25366 10.5007L0.856567 18.8978L2.67484 20.7161L11.0719 12.319L19.0393 20.2864L20.8576 18.4681L12.8902 10.5007L20.8576 2.53336L19.0393 0.715088L11.0719 8.68247Z" fill="#3A405B"/>
+									</svg>
+								</div>
+							</div>
+							<div class="filter-mob-main">
+								<div class="filter-mob-main-row">
+									Тип 1
+								</div>
+								<div class="filter-mob-main-row">
+									Тип 2
+								</div>
+								<div class="filter-mob-main-row">
+									Тип 3
+								</div>
+								<div class="filter-mob-main-row">
+									Тип 4
+								</div>
+							</div>
+						</div>
+						<div class="filter-mob-side filter-mob-side-additional filter-mob-filter-cost">
+							<div class="filter-mob-header">
+								<div class="filter-mob-header-btn-back">
+									<svg width="29" height="16" viewBox="0 0 29 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M0.292892 7.29289C-0.0976315 7.68342 -0.0976315 8.31658 0.292892 8.70711L6.65685 15.0711C7.04738 15.4616 7.68054 15.4616 8.07107 15.0711C8.46159 14.6805 8.46159 14.0474 8.07107 13.6569L2.41421 8L8.07107 2.34315C8.46159 1.95262 8.46159 1.31946 8.07107 0.928932C7.68054 0.538408 7.04738 0.538408 6.65685 0.928932L0.292892 7.29289ZM29 7L1 7V9L29 9V7Z" fill="#3A405B"/>
+									</svg>
+								</div>
+								<div class="filter-mob-header-text">Цена руб.</div>
+								<div class="filter-mob-header-btn-cross">
+									<svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path fill-rule="evenodd" clip-rule="evenodd" d="M11.0719 8.68247L2.67487 0.2854L0.856591 2.10367L9.25366 10.5007L0.856567 18.8978L2.67484 20.7161L11.0719 12.319L19.0393 20.2864L20.8576 18.4681L12.8902 10.5007L20.8576 2.53336L19.0393 0.715088L11.0719 8.68247Z" fill="#3A405B"/>
+									</svg>
+								</div>
+							</div>
+							<div class="filter-mob-main">
+								<div class="filter-mob-main-custom filter-mob-main-custom-inputs">
+									<input type="number" class="filter-mob-main-input" placeholder="Цена от:">
+									<input type="number" class="filter-mob-main-input" placeholder="Цена до:">
+								</div>
+							</div>
+						</div>
+						<div class="filter-mob-side filter-mob-side-additional filter-mob-filter-width">
+							<div class="filter-mob-header">
+								<div class="filter-mob-header-btn-back">
+									<svg width="29" height="16" viewBox="0 0 29 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M0.292892 7.29289C-0.0976315 7.68342 -0.0976315 8.31658 0.292892 8.70711L6.65685 15.0711C7.04738 15.4616 7.68054 15.4616 8.07107 15.0711C8.46159 14.6805 8.46159 14.0474 8.07107 13.6569L2.41421 8L8.07107 2.34315C8.46159 1.95262 8.46159 1.31946 8.07107 0.928932C7.68054 0.538408 7.04738 0.538408 6.65685 0.928932L0.292892 7.29289ZM29 7L1 7V9L29 9V7Z" fill="#3A405B"/>
+									</svg>
+								</div>
+								<div class="filter-mob-header-text">Ширина (см)</div>
+								<div class="filter-mob-header-btn-cross">
+									<svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path fill-rule="evenodd" clip-rule="evenodd" d="M11.0719 8.68247L2.67487 0.2854L0.856591 2.10367L9.25366 10.5007L0.856567 18.8978L2.67484 20.7161L11.0719 12.319L19.0393 20.2864L20.8576 18.4681L12.8902 10.5007L20.8576 2.53336L19.0393 0.715088L11.0719 8.68247Z" fill="#3A405B"/>
+									</svg>
+								</div>
+							</div>
+							<div class="filter-mob-main">
+								<div class="filter-mob-main-custom filter-mob-main-custom-inputs">
+									<input type="number" class="filter-mob-main-input" placeholder="Ширина от:">
+									<input type="number" class="filter-mob-main-input" placeholder="Ширина до:">
+								</div>
+							</div>
+						</div>
+					</div>
 					<div class="filter">
 						<div class="filter-row">
 							<label class="filter-checkbox">
