--- a/app/collection-item.html
+++ b/app/collection-item.html
@@ -50,19 +50,19 @@
 					</a>
 				</div>
 				<div class="header-mob-menu-row header-mob-menu-row_red">
-					<a href="#">Каталог</a>
+					<a href="catalog.html">Каталог</a>
 				</div>
 				<div class="header-mob-menu-row">
-					<a href="#">Где купить</a>
+					<a href="where-buy.html">Где купить</a>
 				</div>
 				<div class="header-mob-menu-row">
-					<a href="#">О компании</a>
+					<a href="about.html">О компании</a>
 				</div>
 				<div class="header-mob-menu-row">
-					<a href="#">Доставка и оплата</a>
+					<a href="principels.html">Доставка и оплата</a>
 				</div>
 				<div class="header-mob-menu-row header-mob-menu-row_mb">
-					<a href="#">Интересное</a>
+					<a href="news.html">Интересное</a>
 				</div>
 				<div class="header-mob-menu-row header-mob-menu-row_horiz">
 					<div class="header-mob-menu-row-item">
