--- a/app/fabrics-active.html
+++ b/app/fabrics-active.html
@@ -51,19 +51,19 @@
 					</a>
 				</div>
 				<div class="header-mob-menu-row header-mob-menu-row_red">
-					<a href="#">Каталог</a>
+					<a href="catalog.html">Каталог</a>
 				</div>
 				<div class="header-mob-menu-row">
-					<a href="#">Где купить</a>
+					<a href="where-buy.html">Где купить</a>
 				</div>
 				<div class="header-mob-menu-row">
-					<a href="#">О компании</a>
+					<a href="about.html">О компании</a>
 				</div>
 				<div class="header-mob-menu-row">
-					<a href="#">Доставка и оплата</a>
+					<a href="principels.html">Доставка и оплата</a>
 				</div>
 				<div class="header-mob-menu-row header-mob-menu-row_mb">
-					<a href="#">Интересное</a>
+					<a href="news.html">Интересное</a>
 				</div>
 				<div class="header-mob-menu-row header-mob-menu-row_horiz">
 					<div class="header-mob-menu-row-item">
@@ -492,6 +492,7 @@
 		
 		<div class="main">
 			<div class="container">
+				<div class="fabrics-active-banner-mob"></div>
 				<div class="block">
 					<div class="block-head block-head_text-left">Голден Флис (тип ткани)</div>
 					<div class="fabrics-active-banner">
