--- a/app/news-item.html
+++ b/app/news-item.html
@@ -51,19 +51,19 @@
 					</a>
 				</div>
 				<div class="header-mob-menu-row header-mob-menu-row_red">
-					<a href="#">Каталог</a>
+					<a href="catalog.html">Каталог</a>
 				</div>
 				<div class="header-mob-menu-row">
-					<a href="#">Где купить</a>
+					<a href="where-buy.html">Где купить</a>
 				</div>
 				<div class="header-mob-menu-row">
-					<a href="#">О компании</a>
+					<a href="about.html">О компании</a>
 				</div>
 				<div class="header-mob-menu-row">
-					<a href="#">Доставка и оплата</a>
+					<a href="principels.html">Доставка и оплата</a>
 				</div>
 				<div class="header-mob-menu-row header-mob-menu-row_mb">
-					<a href="#">Интересное</a>
+					<a href="news.html">Интересное</a>
 				</div>
 				<div class="header-mob-menu-row header-mob-menu-row_horiz">
 					<div class="header-mob-menu-row-item">
@@ -530,7 +530,7 @@
 				</div>
 				<div class="block block_padding-ext">
 					<div class="block-head">За ними просто ухаживать</div>
-					<div class="card-wrapper">
+					<div class="card-wrapper card-wrapper_mob">
 						<div class="card-item-wrapper">
 							<div class="card-item">
 									<div class="card-item_hide">
